v1.5.14/_sources/core_api.rst.txt
.. _core:

######
 Core
######

*************
 Connections
*************

.. autoclass:: client.Connections
    :members:

.. autoclass:: metanames.ConnectionMetaNames
    :members:

*************
 Data assets
*************

.. autoclass:: client.Assets
    :members:
    :inherited-members:

.. autoclass:: metanames.AssetsMetaNames
    :members:

.. autoclass:: ibm_watsonx_ai.utils.enums.AssetDuplicateAction
    :members:
    :undoc-members:

***************
 Folder assets
***************

.. autoclass:: client.FolderAssets
    :members:
    :inherited-members:

.. autoclass:: metanames.FolderAssetsMetaNames
    :members:

****************
 Trashed assets
****************

.. autoclass:: client.TrashedAssets
    :members:
    :inherited-members:

*************
 Deployments
*************

.. autoclass:: client.Deployments
    :members:
    :inherited-members:
    :undoc-members:
    :exclude-members: DEFAULT_CONCURRENCY_LIMIT, HardwareRequestSizes

.. autoclass:: metanames.DeploymentMetaNames
    :members:

.. autoclass:: ibm_watsonx_ai.utils.enums.RShinyAuthenticationValues
    :members:
    :undoc-members:

.. autoclass:: metanames.ScoringMetaNames
    :members:

.. autoclass:: metanames.DecisionOptimizationMetaNames
    :members:

.. autoclass:: ibm_watsonx_ai.deployments.RuntimeContext
    :members:

***************
 Export/Import
***************

.. autoclass:: client.Export
    :members:

.. autoclass:: metanames.ExportMetaNames
    :members:

.. autoclass:: client.Import
    :members:

************************************************
 Factsheets (IBM watsonx.ai for IBM Cloud only)
************************************************

**Warning!** Not supported for IBM Cloud Pak® for Data.

.. autoclass:: client.Factsheets
    :members:

.. autoclass:: metanames.FactsheetsMetaNames
    :members:

*************************
 Hardware specifications
*************************

.. _core-api-hardware-specification:

.. autoclass:: client.HwSpec
    :members:
    :inherited-members:

.. autoclass:: metanames.HwSpecMetaNames
    :members:

*********
 Helpers
*********

.. autoclass:: ibm_watsonx_ai.helpers.helpers.get_credentials_from_config
    :members:
    :exclude-members:
    :undoc-members:
    :show-inheritance:

*******************
 Model definitions
*******************

.. autoclass:: client.ModelDefinition
    :members:

.. autoclass:: metanames.ModelDefinitionMetaNames
    :members:

********************
 Package extensions
********************

.. autoclass:: client.PkgExtn
    :members:

.. autoclass:: metanames.PkgExtnMetaNames
    :members:

****************
 Parameter Sets
****************

.. autoclass:: client.ParameterSets
    :members:

.. autoclass:: metanames.ParameterSetsMetaNames
    :members:

************
 Repository
************

.. autoclass:: client.Repository
    :members:
    :inherited-members:

.. autoclass:: metanames.RepositoryMemberMetaNames
    :members:

.. autoclass:: metanames.ModelMetaNames
    :members:

.. autoclass:: metanames.LibraryMetaNames
    :members:

.. autoclass:: metanames.ExperimentMetaNames
    :members:

.. autoclass:: metanames.FunctionMetaNames
    :members:

.. autoclass:: metanames.PipelineMetanames
    :members:

.. autoclass:: metanames.AIServiceMetaNames
    :members:

********
 Script
********

.. autoclass:: client.Script
    :members:
    :inherited-members:

.. autoclass:: metanames.ScriptMetaNames
    :members:

******************
 Service instance
******************

.. autoclass:: client.ServiceInstance
    :members:

*****
 Set
*****

.. autoclass:: client.Set
    :members:

**************************************
 Shiny (IBM Cloud Pak® for Data only)
**************************************

**Warning!** Not supported for IBM watsonx.ai for IBM Cloud.

.. autoclass:: client.Shiny
    :members:
    :inherited-members:

.. autoclass:: metanames.ShinyMetaNames
    :members:

***************************************
 Volume (IBM Cloud Pak® for Data only)
***************************************

**Warning!** Not supported for IBM watsonx.ai for IBM Cloud.

.. autoclass:: client.Volume
    :members:
    :inherited-members:

.. autoclass:: metanames.VolumeMetaNames
    :members:

*************************
 Software specifications
*************************

.. autoclass:: client.SwSpec
    :members:
    :inherited-members:

.. autoclass:: metanames.SwSpecMetaNames
    :members:

********
 Spaces
********

.. autoclass:: client.Spaces
    :members:

.. autoclass:: metanames.SpacesMetaNames
    :members:

**********
 Projects
**********

.. autoclass:: client.Projects
    :members:

.. autoclass:: metanames.ProjectsMetaNames
    :members:

***********************************
 Platform Spaces / Projects Member
***********************************

.. autoclass:: metanames.MemberMetaNames
    :members:

*********************
 Runtime Definitions
*********************

.. autoclass:: client.RuntimeDefinitions
    :members:
    :inherited-members:

.. autoclass:: metanames.RuntimeDefinitionsMetaNames
    :members:

******************
 Task Credentials
******************

.. autoclass:: client.TaskCredentials
    :members:

**********
 Training
**********

.. autoclass:: client.Training
    :members:
    :inherited-members:

.. autoclass:: metanames.TrainingConfigurationMetaNames
    :members:

*******
 Enums
*******

.. automodule:: ibm_watsonx_ai.utils.autoai.enums
    :members:
    :exclude-members:
    :undoc-members:
    :show-inheritance:
